--- a/food-list-app/package.json
+++ b/food-list-app/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
