--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "pg-pool": "^3.7.0"
   }
